--- a/Topic 0/index-v.html
+++ b/Topic 0/index-v.html
@@ -8,5 +8,11 @@
     <header>
       <h1>Media</h1>
     </header>
+
+    <audio src="https://ccrma.stanford.edu/~jos/wav/cello.wav" controls></audio>
+
+    <video src="http://media.w3.org/2010/05/sintel/trailer.mp4" controls></video>
+    <img src="https://www.mix1049.com.au/images/rain-stoppers-1461288_1920.jpg" alt="A wet glass, rain through it">
+
   </body>
 </html>
