--- a/Topic 0/index-iv.html
+++ b/Topic 0/index-iv.html
@@ -9,6 +9,7 @@
     <header>
       <h1>Expenses</h1>
     </header>
+    <div>
     <table>
       <tr>
         <th>Things to Pay</th>
@@ -39,5 +40,6 @@
         <td>$2000</td>
       </tr>
     </table>
+  </div>
   </body>
 </html>
