--- a/Topic 0/index-v.html
+++ b/Topic 0/index-v.html
@@ -2,18 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Media</title>
   </head>
   <body>
     <header>
-      <h1>Media</h1>
+      <h1>Our Media Gallery</h1>
     </header>
-
-    <audio src="https://ccrma.stanford.edu/~jos/wav/cello.wav" controls></audio>
-
-    <video src="http://media.w3.org/2010/05/sintel/trailer.mp4" controls></video>
-    <img src="https://www.mix1049.com.au/images/rain-stoppers-1461288_1920.jpg" alt="A wet glass, rain through it">
+    <div>
+      <h2> Music </h2>
+      <audio
+        src="https://ccrma.stanford.edu/~jos/wav/cello.wav"
+        controls>
+      </audio>
+    </div>
+    <div>
+      <h2> Images </h2>
+      <img    src="https://www.mix1049.com.au/images/rain-stoppers-1461288_1920.jpg" alt="A wet glass, rain through it"
+      width= 480px>
+    </div>
+    <div>
+      <h2> Video </h2>
+      <video
+        src="http://media.w3.org/2010/05/sintel/trailer.mp4"
+        controls
+        width= 480px>
+      </video>
+    </div>
 
   </body>
 </html>
