--- a/Topic 0/index.html
+++ b/Topic 0/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
 
   <body>
-    <div>
+    <div class="grid">
 
     <header class="header">
       <p>Header</p>
