--- a/Topic 0/index.html
+++ b/Topic 0/index.html
@@ -7,36 +7,31 @@
     <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
+<body>
+  <header class="header">header</header>
 
-  <body>
-    <div class="grid">
 
-    <header class="header">
-      <p>Header</p>
-    </header>
+<div class="container">
+    <nav class="navigation">nav</nav>
 
-    <nav class="navigation"> <p>Nav</p>
-    </nav>
+    <section class="content">section
 
-    <section class="content">
-      <header class="headline">
-        <p>Header</p>
-      </header>
-      <article> <p>Article</p>
-      </article>
-      <footer class="footline">
-        <p>Footer</p>
-      </footer>
+        <header class="headline">header</header>
+
+        <article>article</article>
+
+        <footer class="footline">footer</footer>
+
     </section>
 
-    <aside class="sidebar"> <p>Aside</p>
-    </aside>
+    <aside class="sidebar">aside</aside>
 
-</div>
 
-    <footer class="footer"> <p>Footer</p>
-    </footer>
 
+
+  </div>
+
+  <footer class="footer">footer</footer>
 
   </body>
 </html>
