--- a/Topic 0/m-index.html
+++ b/Topic 0/m-index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="m-style.css">
     <title></title>
   </head>
+
+
   <body>
     <div class="container">
       <div class="one">
-
         <div class="element1">
-       </div>
-       <div class="element2">
-       </div>
-       <header class="head">
-         <h3>Showcase</h3>
+        </div>
+        <div class="element1">
+        </div>
+        <header class="head">
+           <h2>Incredible Types</h2>
+           <h3>Showcase</h3>
       </div>
       <div class="two">
       </div>
@@ -27,7 +29,7 @@
         </div>
         <div class="element1">
         </div>
-        <div class="element2">
+        <div class="element1">
         </div>
       </div>
       <div class="four">
@@ -35,16 +37,12 @@
       <div class="five">
         <div class="element1">
         </div>
-        <div class="element2">
+        <div class="element1">
         </div>
       </div>
       <div class="six">
       </div>
 
-
-
-
-
-</div>
+    </div>
   </body>
 </html>
